<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>Telemedicine-Doctor-Desktop-App</groupId>
    <artifactId>Telemedicine-Doctor-Desktop-App</artifactId>
    <version>1.2.0</version>
    <packaging>jar</packaging>
    
    	<dependencies>

		<!-- HTTP request needed dependencies -->

		<!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
		<dependency>
			<groupId>com.google.code.gson</groupId>
			<artifactId>gson</artifactId>
			<version>2.8.9</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.json/json -->
		<dependency>
			<groupId>org.json</groupId>
			<artifactId>json</artifactId>
			<version>20210307</version>
		</dependency>

		<!-- JavaFx FXML dependencies -->

		<!-- https://mvnrepository.com/artifact/com.jfoenix/jfoenix -->
		<!-- JFoenix 9.0.1 dependency requires Java 9 or newer versions -->
		<dependency>
			<groupId>com.jfoenix</groupId>
			<artifactId>jfoenix</artifactId>
			<version>9.0.1</version>
		</dependency>

		<!-- Due to a low performance in the JavaFX graphs we used a library of 
			charts designed to work with big data sets -->
		<dependency>
			<groupId>de.gsi.chart</groupId>
			<artifactId>chartfx-chart</artifactId>
			<version>11.1.5</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-simple -->
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-simple</artifactId>
			<version>2.0.0-alpha0</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.webjars/font-awesome -->
		<dependency>
			<groupId>org.controlsfx</groupId>
			<artifactId>controlsfx</artifactId>
			<version>11.1.0</version>
		</dependency>

		<!-- Java Fx dependencies -->
		
		<!-- https://mvnrepository.com/artifact/org.openjfx/javafx-graphics -->
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-graphics</artifactId>
			<version>18-ea+8</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.openjfx/javafx-controls -->
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-controls</artifactId>
			<version>18-ea+7</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.openjfx/javafx-fxml -->
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-fxml</artifactId>
			<version>18-ea+7</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/com.github.kerner1000/javafx-chart-zooming -->
		<dependency>
			<groupId>org.gillius</groupId>
			<artifactId>jfxutils</artifactId>
			<version>1.0</version>
		</dependency>

	</dependencies>

	<properties>
    	<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    	<maven.compiler.source>11</maven.compiler.source>
   		<maven.compiler.target>11</maven.compiler.target>
  	</properties>

	<build>
		<sourceDirectory>src/main/java</sourceDirectory>
		<finalName>jar-compilation</finalName>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.0</version>
				<configuration>
					<release>11</release>
					<target>11</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.openjfx</groupId>
				<artifactId>javafx-maven-plugin</artifactId>
				<version>0.0.8</version>
				<configuration>
					<mainClass>launch.LaunchApp</mainClass>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-shade-plugin</artifactId>
				<version>3.2.4</version>
				<configuration>
					<filters>
						<filter>
							<artifact>*:*</artifact>
							<excludes>
								<exclude>module-info.class</exclude>
								<exclude>META-INF/license/**</exclude>
								<exclude>META-INF/*</exclude>
								<exclude>META-INF/maven/**</exclude>
								<exclude>LICENSE</exclude>
								<exclude>NOTICE</exclude>
								<exclude>/*.txt</exclude>
								<exclude>build.properties</exclude>
								<exclude>license/LICENSE/*</exclude>
								<exclude>license/*</exclude>
								<exclude>META-INF/substrate/config/</exclude>
							</excludes>
						</filter>
					</filters>
				</configuration>
				<executions>
					<execution>
						<goals>
							<goal>shade</goal>
						</goals>
						<configuration>
							<finalName>Telelepsia-Hospitals-${project.version}</finalName>
							<shadedArtifactAttached>true</shadedArtifactAttached>
							<transformers>
								<transformer
									implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
									<mainClass>launch.Launcher</mainClass>
								</transformer>
							</transformers>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
</project>
